# AMP_ASSv3

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  TROUBLESHOOTING.md  WSL_ROSBAG_TIPS.md  rosbag_tips.md  start_micro_ros.sh  start_static_tf.sh  start_vlp.sh  start_zed.sh  view_frames.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
doc/: WSL.md
scripts/: directory-tree-check.py  open-everything.sh  setup-micro-ros-agent.sh
src/adaptive_clustering-ros2/: .travis.yml  CMakeLists.txt  package.xml
src/adaptive_clustering-ros2/msg/: ClusterArray.msg
src/adaptive_clustering-ros2/param/: adaptive_clustering.yaml
src/adaptive_clustering-ros2/src/: adaptive_clustering.cpp
src/amp_kart_bringup/: CMakeLists.txt  README.md  package.xml
src/amp_kart_bringup/config/: common.yaml
src/amp_kart_bringup/launch/: VLP16.launch.py  bringup.launch.py  kart.launch.py  kart_bringup.launch.py  kart_commander.launch.py  laptop_bringup.launch.py  localization.launch.py  micro_ros_agent.launch.py  nav2_bringup.launch.py  navigation.launch.py  rviz.launch.py  sensor_nav2.launch.py  slam.launch.py  teleop.launch.py  twist_mux.launch.py  zed.launch.py
src/amp_kart_bringup/maps/: turtlebot3.world.yaml
src/amp_kart_bringup/params/: VLP16.params.yaml  costmap.params.yaml  local_goal.params.yaml  nav2.params.yaml  patchworkpp.params.yaml  segmentation.params.yaml  switch_mux.params.yaml  twist_mux.params.yaml  twist_mux_1.params.yaml  twist_mux_2.params.yaml
src/amp_kart_bringup/rviz/: nav2_default_view.rviz.yaml
src/amp_kart_bt_navigator/: CMakeLists.txt  README.md  package.xml
src/amp_kart_bt_navigator/behavior_trees/: navigate_w_replanning_and_recovery.xml
src/amp_kart_commander/: README.md  package.xml  setup.cfg  setup.py
src/amp_kart_commander/amp_kart_commander/: kart_commander.py  switch_mux.py
src/amp_kart_commander/test/: README.md
src/amp_kart_description/: CMakeLists.txt  README.md  package.xml
src/amp_kart_description/launch/: display_kart.launch.py
src/amp_kart_description/meshes/: chassisV2.stl
src/amp_kart_description/urdf/: kart.urdf  macros.xacro  materials.xacro  racecar.gazebo  racecar.xacro
src/amp_kart_segmentation/: CMakeLists.txt  README.md  package.xml
src/amp_kart_segmentation/launch/: segmentation.launch.py
src/amp_kart_segmentation/params/: segmentation.params.yaml
src/amp_kart_segmentation/rviz/: default.rviz
src/amp_kart_segmentation/src/: segmentation.cpp
src/amp_kart_simulate/: CMakeLists.txt  README.md  package.xml
src/amp_kart_simulate/launch/: purdue_gp_simulation.launch.py  tb3_simulation.launch.py
src/amp_kart_simulate/urdf/: turtlebot3_waffle.urdf.xml
src/amp_kart_simulate/worlds/: cones_grandprix_track.world  purdue_gp_track.model  purdue_gp_track.sdf.xml
src/amp_launch_tests/: CMakeLists.txt  README.md  package.xml
src/amp_launch_tests/config/: xbox.config.yaml
src/amp_launch_tests/launch/: kart.launch.py  perception_bringup.launch.py  rviz.launch.py  sensor_nav2.launch.py  teleop_joy_micro_ros.launch.py  teleop_joy_micro_ros.py  teleop_joy_micro_ros_client.py  teleop_joy_micro_ros_server.py
src/amp_local_goal/: README.md  package.xml  setup.cfg  setup.py
src/amp_local_goal/amp_local_goal/: follow_waypoint.py
src/amp_local_goal/params/: local_goal_params.yaml
src/amp_local_waypoint/: package.xml  setup.cfg  setup.py
src/amp_local_waypoint/amp_local_waypoint/: follow_waypoint.py
src/amp_msgs/: CMakeLists.txt  README.md  package.xml
src/amp_msgs/srv/: NetworkState.srv  TrackState.srv
src/amp_network_lifecycle/: README.md  package.xml  setup.cfg  setup.py
src/amp_network_lifecycle/amp_network_lifecycle/: network_lifecycle_client.py  network_lifecycle_server.py
src/amp_rcs_client/: README.md  package.xml  setup.cfg  setup.py
src/amp_rcs_client/amp_rcs/: dummy_server.py  service_client.py
src/flatten/: package.xml  setup.cfg  setup.py
src/flatten/flatten/: flatten_node.py
