<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_clustering</name>
  <version>0.0.2</version>
  <description>Light-weight real-time high-accuracy point cloud clustering.</description>
  <maintainer email="zhi.yan@utbm.fr">Zhi Yan</maintainer>
  <maintainer email="lsun@lincoln.ac.uk">Li Sun</maintainer>
  <maintainer email="hoyos@purdue.edu">Andres Hoyos</maintainer>
  <maintainer email="yang1510@purdue.edu">Haoguang Yang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
