<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amp_kart_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for the kart</description>
  <maintainer email="achungma@purdue.edu">achungma</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_msgs</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
