<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amp_kart_bringup</name>
  <version>0.0.0</version>
  <description>Files to start the kart</description>
  <maintainer email="achungma@purdue.edu">achungma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>nav2_common</depend>
  <depend>navigation2</depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_msgs</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
