<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amp_rcs</name>
  <version>0.0.1</version>
  <description
  >Service client for sent track state change requests to the service server</description>
  <maintainer email="berlier3@gmail.com">Nick Berlier</maintainer>
  <license>GNU General Public License 3.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
